# toio-osc

osc_controls/src/: main.rs
ramoramo/: Cargo.toml
ramoramo/src/: cube.rs  main.rs  mix.rs  zoro.rs
toio_experiment/: Cargo.toml
toio_experiment/src/: main.rs
zorozoro/: Cargo.toml
zorozoro/src/: main.rs
